--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Estilos Propios -->
-    <link rel="stylesheet" href="./styles/css/main.css">
+    <link rel="stylesheet" href="./styles/css/main.css" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -14,16 +14,19 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
     <title>Proyecto 2</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    
-
-
-
-
+    <header class="bg-red-primary">
+      <div class="container d-flex flex-column text-center pb-5">
+        <div class="img-container">
+          <img src="./assets/img/pokemon-logo.png" class="img-fluid pokemon-logo" alt="Logo Pokemon">
+        </div>
+        <h1>
+          Bienvenido entrenador
+        </h1>
+      </div>
+    </header>
 
     <!-- JS Propio -->
     <script src="./js/main.js"></script>
