--- a/index.html
+++ b/index.html
@@ -19,38 +19,66 @@
   <body>
     <!-- /////////////////////////
               HEADER
-    ////////////////////////////--> 
+    ////////////////////////////-->
     <header class="bg-red-primary">
       <div class="container d-flex flex-column text-center pb-5">
         <div class="img-container">
-          <img src="./assets/img/pokemon-logo.png" class="img-fluid pokemon-logo" alt="Logo Pokemon">
+          <img
+            src="./assets/img/pokemon-logo.png"
+            class="img-fluid pokemon-logo"
+            alt="Logo Pokemon"
+          />
         </div>
-        <h1>
-          Bienvenido entrenador
-        </h1>
+        <h1>Bienvenido entrenador</h1>
       </div>
     </header>
 
     <!-- /////////////////////////
               FORMULARIO
-    ////////////////////////////--> 
+    ////////////////////////////-->
     <div class="login-box">
       <h2 class="login-title">Indica tu nombre</h2>
       <form id="form" method="POST">
-          <!-- email input -->
-          <label for="email">email</label>
-          <input type="email" name="email" id="email" class="input-field">
+        <!-- email input -->
+        <label for="email">email</label>
+        <input type="email" name="email" id="email" class="input-field" />
 
-          <!-- password input-->
-          <label for="name">Nombre</label>
-          <input type="text" name="name" id="name" class="input-field">
-          
-          <!-- submit input-->
-          <input type="button" value="login" class="btn-submit">
+        <!-- password input-->
+        <label for="name">Nombre</label>
+        <input type="text" name="name" id="name" class="input-field" />
+
+        <!-- submit input-->
+        <input type="button" value="login" class="btn-submit" />
       </form>
-  </div>
+    </div>
 
+    <!-- /////////////////////////
+            TARJETAS
+  ////////////////////////////-->
+    <div class="container">
+      <div class="user-card">
+        <div class="user-card__header">
+          <div class="user-card__name">
+            <p>Charizard</p>
+          </div>
+          <div class="user-card__ps">30</div>
+        </div>
+        <div class="user-card__img">
+          <img
+            src="./assets/img/pokemon-test.png"
+            class="img-fluid"
+            alt="Pokemon"
+          />
+        </div>
+        <div class="user-card__content">
+          <div class="user-card__stats">Stats</div>
+        </div>
+      </div>
+    </div>
 
+    <!-- /////////////////////////
+              BATTLEFIELD
+    ////////////////////////////--> 
 
     <!-- JS Propio -->
     <script src="./js/main.js"></script>
