TARJETA-BACK - completado

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
     </div>
 
     <!-- /////////////////////////
+            TAJETA-BACK
+    ////////////////////////////--> 
+    <div class="container">
+      <div class="reverse-card">
+        <div class="reverse-card-img">
+          <img src="./assets/img/card-reverse.png" class="img-fluid" alt="reverse card">
+        </div>
+      </div>
+    </div>
+
+    <!-- /////////////////////////
               BATTLEFIELD
     ////////////////////////////--> 
 
