fondo tablero y página de comps

--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
     <div class="login-box">
       <h2 class="login-title">Indica tu nombre</h2>
       <form id="form" method="POST">
-        <!-- email input -->
-        <label for="email">email</label>
-        <input type="email" name="email" id="email" class="input-field" />
-
-        <!-- password input-->
+        <!-- name input-->
         <label for="name">Nombre</label>
         <input type="text" name="name" id="name" class="input-field" />
 
@@ -51,45 +47,221 @@
         <input type="button" value="login" class="btn-submit" />
       </form>
     </div>
-
-    <!-- /////////////////////////
-            TARJETAS
-  ////////////////////////////-->
-    <div class="container">
-      <div class="user-card">
-        <div class="user-card__header">
-          <div class="user-card__name">
-            <p>Charizard</p>
-          </div>
-          <div class="user-card__ps">30</div>
-        </div>
-        <div class="user-card__img">
-          <img
-            src="./assets/img/pokemon-test.png"
-            class="img-fluid"
-            alt="Pokemon"
-          />
-        </div>
-        <div class="user-card__content">
-          <div class="user-card__stats">Stats</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- /////////////////////////
-            TAJETA-BACK
-    ////////////////////////////--> 
-    <div class="container">
-      <div class="reverse-card">
-        <div class="reverse-card-img">
-          <img src="./assets/img/card-reverse.png" class="img-fluid" alt="reverse card">
-        </div>
-      </div>
-    </div>
-
     <!-- /////////////////////////
               BATTLEFIELD
-    ////////////////////////////--> 
+    ////////////////////////////-->
+    <div class="battlefield">
+      <div class="container">
+        <!-- COMPUTER-FIELD -->
+        <div class="computer-field">
+          <div class="row">
+            <div class="col-4">
+              <div class="reverse-card">
+                <div class="reverse-card-img">
+                  <img
+                    src="./assets/img/card-reverse.png"
+                    class="img-fluid"
+                    alt="reverse card"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="reverse-card">
+                <div class="reverse-card-img">
+                  <img
+                    src="./assets/img/card-reverse.png"
+                    class="img-fluid"
+                    alt="reverse card"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="reverse-card">
+                <div class="reverse-card-img">
+                  <img
+                    src="./assets/img/card-reverse.png"
+                    class="img-fluid"
+                    alt="reverse card"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacer"></div>
+
+        <!-- BATTLE-CARDS -->
+        <div class="battle-cards">
+          <div class="row justify-content-center">
+            <div class="col-4">
+              <div class="user-card">
+                <div class="user-card__header">
+                  <div class="user-card__name">
+                    <p>Charizard</p>
+                  </div>
+                  <div class="user-card__ps">30</div>
+                </div>
+                <div class="user-card__img">
+                  <img
+                    src="./assets/img/pokemon-test.png"
+                    class="img-fluid"
+                    alt="Pokemon"
+                  />
+                </div>
+                <div class="user-card__content">
+                  <div class="user-card__stats">Stats</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="user-card">
+                <div class="user-card__header">
+                  <div class="user-card__name">
+                    <p>Charizard</p>
+                  </div>
+                  <div class="user-card__ps">30</div>
+                </div>
+                <div class="user-card__img">
+                  <img
+                    src="./assets/img/pokemon-test.png"
+                    class="img-fluid"
+                    alt="Pokemon"
+                  />
+                </div>
+                <div class="user-card__content">
+                  <div class="user-card__stats">Stats</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacer"></div>
+
+        <!-- USER-FIELD -->
+        <div class="user-field">
+          <div class="row">
+            <div class="col-4">
+              <div class="user-card">
+                <div class="user-card__header">
+                  <div class="user-card__name">
+                    <p>Charizard</p>
+                  </div>
+                  <div class="user-card__ps">30</div>
+                </div>
+                <div class="user-card__img">
+                  <img
+                    src="./assets/img/pokemon-test.png"
+                    class="img-fluid"
+                    alt="Pokemon"
+                  />
+                </div>
+                <div class="user-card__content">
+                  <div class="user-card__stats">Stats</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="user-card">
+                <div class="user-card__header">
+                  <div class="user-card__name">
+                    <p>Charizard</p>
+                  </div>
+                  <div class="user-card__ps">30</div>
+                </div>
+                <div class="user-card__img">
+                  <img
+                    src="./assets/img/pokemon-test.png"
+                    class="img-fluid"
+                    alt="Pokemon"
+                  />
+                </div>
+                <div class="user-card__content">
+                  <div class="user-card__stats">Stats</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="user-card">
+                <div class="user-card__header">
+                  <div class="user-card__name">
+                    <p>Charizard</p>
+                  </div>
+                  <div class="user-card__ps">30</div>
+                </div>
+                <div class="user-card__img">
+                  <img
+                    src="./assets/img/pokemon-test.png"
+                    class="img-fluid"
+                    alt="Pokemon"
+                  />
+                </div>
+                <div class="user-card__content">
+                  <div class="user-card__stats">Stats</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- /////////////////////////
+            RESULTADOS
+    ////////////////////////////-->
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+    >
+      TRIGGER RESULTADOS
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Resultados</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">
+              Volver a jugar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- JS Propio -->
     <script src="./js/main.js"></script>
