--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
 
     <!-- JS Propio -->
-    <script src="./js/main.js"></script>
+    <script src="./js/pokemon-fights.js"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
