Estructura con Holo-Cards

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="computer-field">
           <div class="row">
             <div class="col-4">
-              <div class="reverse-card">
+              <div class="reverse-card card animated">
                 <div class="reverse-card-img">
                   <img
                     src="./assets/img/card-reverse.png"
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col-4">
-              <div class="reverse-card">
+              <div class="reverse-card card animated">
                 <div class="reverse-card-img">
                   <img
                     src="./assets/img/card-reverse.png"
@@ -80,7 +80,7 @@
             </div>
 
             <div class="col-4">
-              <div class="reverse-card">
+              <div class="reverse-card card animated">
                 <div class="reverse-card-img">
                   <img
                     src="./assets/img/card-reverse.png"
@@ -99,7 +99,7 @@
         <div class="battle-cards">
           <div class="row justify-content-center">
             <div class="col-4">
-              <div class="user-card">
+              <div class="user-card card animated">
                 <div class="user-card__header">
                   <div class="user-card__name">
                     <p>Charizard</p>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="col-4">
-              <div class="user-card">
+              <div class="user-card card animated">
                 <div class="user-card__header">
                   <div class="user-card__name">
                     <p>Charizard</p>
@@ -148,7 +148,7 @@
         <div class="user-field">
           <div class="row">
             <div class="col-4">
-              <div class="user-card">
+              <div class="user-card card animated">
                 <div class="user-card__header">
                   <div class="user-card__name">
                     <p>Charizard</p>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="col-4">
-              <div class="user-card">
+              <div class="user-card card animated">
                 <div class="user-card__header">
                   <div class="user-card__name">
                     <p>Charizard</p>
@@ -190,7 +190,7 @@
             </div>
 
             <div class="col-4">
-              <div class="user-card">
+              <div class="user-card card animated">
                 <div class="user-card__header">
                   <div class="user-card__name">
                     <p>Charizard</p>
@@ -214,57 +214,12 @@
       </div>
     </div>
 
-    <!-- /////////////////////////
-            RESULTADOS
-    ////////////////////////////-->
-    <!-- Button trigger modal -->
-    <button
-      type="button"
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#exampleModal"
-    >
-      TRIGGER RESULTADOS
-    </button>
-
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Resultados</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">...</div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary">
-              Volver a jugar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- JS Propio -->
     <script src="./js/pokemon-fights.js"></script>
+
+    <!-- holo-cards -->
+    <script src="./js/holo-cards.js"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
