--- a/index.html
+++ b/index.html
@@ -99,43 +99,49 @@
         <div class="battle-cards">
           <div class="row justify-content-center">
             <div class="col-4">
-              <div class="user-card card animated">
-                <div class="user-card__header">
-                  <div class="user-card__name">
-                    <p>Charizard</p>
+              <div class="carta_player pokemon-card">
+                <div class="face front">
+                  <div class="pokemon-name-hp">
+                    <span class="pokemon-name" id="crd_fight_name_1"
+                      >Charizard</span
+                    >
+                    <span class="pokemon-id" id="crd_fight_id_1">8</span>
                   </div>
-                  <div class="user-card__ps">30</div>
-                </div>
-                <div class="user-card__img">
-                  <img
-                    src="./assets/img/pokemon-test.png"
-                    class="img-fluid"
-                    alt="Pokemon"
-                  />
-                </div>
-                <div class="user-card__content">
-                  <div class="user-card__stats">Stats</div>
+                  <div class="imageContainer">
+                    <img
+                      id="crd_fight_img_1"
+                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                      style="width: 120px"
+                    />
+                  </div>
+                  <div class="pokemon-type-id">
+                    <span class="pokemon-hp" id="crd_fight_stats_1">120</span>
+                    <span class="pokemon-type" id="crd_fight_type_1">Fire</span>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-4">
-              <div class="user-card card animated">
-                <div class="user-card__header">
-                  <div class="user-card__name">
-                    <p>Charizard</p>
+              <div class="carta_player pokemon-card">
+                <div class="face front">
+                  <div class="pokemon-name-hp">
+                    <span class="pokemon-name" id="crd_fight_name_2"
+                      >Charizard</span
+                    >
+                    <span class="pokemon-id" id="crd_fight_id_2">8</span>
                   </div>
-                  <div class="user-card__ps">30</div>
-                </div>
-                <div class="user-card__img">
-                  <img
-                    src="./assets/img/pokemon-test.png"
-                    class="img-fluid"
-                    alt="Pokemon"
-                  />
-                </div>
-                <div class="user-card__content">
-                  <div class="user-card__stats">Stats</div>
+                  <div class="imageContainer">
+                    <img
+                      id="crd_fight_img_2"
+                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                      style="width: 120px"
+                    />
+                  </div>
+                  <div class="pokemon-type-id">
+                    <span class="pokemon-hp" id="crd_fight_stats_2">120</span>
+                    <span class="pokemon-type" id="crd_fight_type_2">Fire</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -148,64 +154,72 @@
         <div class="user-field">
           <div class="row">
             <div class="col-4">
-              <div class="user-card card animated">
-                <div class="user-card__header">
-                  <div class="user-card__name">
-                    <p>Charizard</p>
+              <div class="carta_player pokemon-card">
+                <div class="face front">
+                  <div class="pokemon-name-hp">
+                    <span class="pokemon-name" id="crd_plyr_name_1"
+                      >Charizard</span
+                    >
+                    <span class="pokemon-id" id="crd_plyr_id_1">8</span>
                   </div>
-                  <div class="user-card__ps">30</div>
-                </div>
-                <div class="user-card__img">
-                  <img
-                    src="./assets/img/pokemon-test.png"
-                    class="img-fluid"
-                    alt="Pokemon"
-                  />
-                </div>
-                <div class="user-card__content">
-                  <div class="user-card__stats">Stats</div>
+                  <div class="imageContainer">
+                    <img
+                      id="crd_plyr_img_3"
+                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                      style="width: 120px"
+                    />
+                  </div>
+                  <div class="pokemon-type-id">
+                    <span class="pokemon-hp" id="crd_plyr_stats_1">120</span>
+                    <span class="pokemon-type" id="crd_plyr_type_1">Fire</span>
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-4">
-              <div class="user-card card animated">
-                <div class="user-card__header">
-                  <div class="user-card__name">
-                    <p>Charizard</p>
+              <div class="carta_player pokemon-card">
+                <div class="face front">
+                  <div class="pokemon-name-hp">
+                    <span class="pokemon-name" id="crd_plyr_name_2"
+                      >Charizard</span
+                    >
+                    <span class="pokemon-id" id="crd_plyr_id_2">8</span>
                   </div>
-                  <div class="user-card__ps">30</div>
-                </div>
-                <div class="user-card__img">
-                  <img
-                    src="./assets/img/pokemon-test.png"
-                    class="img-fluid"
-                    alt="Pokemon"
-                  />
-                </div>
-                <div class="user-card__content">
-                  <div class="user-card__stats">Stats</div>
+                  <div class="imageContainer">
+                    <img
+                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                      style="width: 120px"
+                    />
+                  </div>
+                  <div class="pokemon-type-id">
+                    <span class="pokemon-hp" id="crd_plyr_stats_2">120</span>
+                    <span class="pokemon-type" id="crd_plyr_type_2">Fire</span>
+                  </div>
                 </div>
               </div>
             </div>
 
+            <!-- NEW CARD -->
             <div class="col-4">
-              <div class="user-card card animated">
-                <div class="user-card__header">
-                  <div class="user-card__name">
-                    <p>Charizard</p>
+              <div class="carta_player pokemon-card">
+                <div class="face front">
+                  <div class="pokemon-name-hp">
+                    <span class="pokemon-name" id="crd_plyr_name_3"
+                      >Charizard</span
+                    >
+                    <span class="pokemon-id" id="crd_plyr_id_3">8</span>
                   </div>
-                  <div class="user-card__ps">30</div>
-                </div>
-                <div class="user-card__img">
-                  <img
-                    src="./assets/img/pokemon-test.png"
-                    class="img-fluid"
-                    alt="Pokemon"
-                  />
-                </div>
-                <div class="user-card__content">
-                  <div class="user-card__stats">Stats</div>
+                  <div class="imageContainer">
+                    <img
+                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                      style="width: 120px"
+                    />
+                  </div>
+                  <div class="pokemon-type-id">
+                    <span class="pokemon-hp" id="crd_plyr_stats_3">120</span>
+                    <span class="pokemon-type" id="crd_plyr_type_3">Fire</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -214,12 +228,11 @@
       </div>
     </div>
 
-
     <!-- JS Propio -->
     <script src="./js/pokemon-fights.js"></script>
 
     <!-- holo-cards -->
-    <script src="./js/holo-cards.js"></script>
+    <!-- <script src="./js/holo-cards.js"></script> -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
