SE RESTAURA FONTS

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- COMPUTER-FIELD -->
         <div class="computer-field">
           <div class="d-flex justify-content-center">
-            <div class="reverse-card card animated">
+            <div class="reverse-card card">
               <div class="reverse-card-img">
                 <img
                   src="./assets/img/card-reverse.png"
@@ -65,7 +65,7 @@
               </div>
             </div>
 
-            <div class="reverse-card card animated">
+            <div class="reverse-card card">
               <div class="reverse-card-img">
                 <img
                   src="./assets/img/card-reverse.png"
@@ -75,7 +75,7 @@
               </div>
             </div>
 
-            <div class="reverse-card card animated">
+            <div class="reverse-card card">
               <div class="reverse-card-img">
                 <img
                   src="./assets/img/card-reverse.png"
