--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- COMPUTER-FIELD -->
         <div class="computer-field">
           <div class="d-flex justify-content-center">
-            <div class="reverse-card card">
+            <div class="reverse-card card-pok">
               <div class="reverse-card-img">
                 <img
                   src="./assets/img/card-reverse.png"
@@ -65,7 +65,7 @@
               </div>
             </div>
 
-            <div class="reverse-card card">
+            <div class="reverse-card card-pok">
               <div class="reverse-card-img">
                 <img
                   src="./assets/img/card-reverse.png"
@@ -75,7 +75,7 @@
               </div>
             </div>
 
-            <div class="reverse-card card">
+            <div class="reverse-card card-pok">
               <div class="reverse-card-img">
                 <img
                   src="./assets/img/card-reverse.png"
@@ -92,7 +92,7 @@
         <!-- BATTLE-CARDS -->
         <div class="battle-cards">
           <div class="d-flex justify-content-center">
-            <div class="carta_player pokemon-card">
+            <div class="carta_player pokemon-card card-pok">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_fight_name_1"
@@ -114,7 +114,7 @@
               </div>
             </div>
 
-            <div class="carta_player pokemon-card">
+            <div class="carta_player pokemon-card card-pok">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_fight_name_2"
@@ -143,7 +143,7 @@
         <!-- USER-FIELD -->
         <div class="user-field">
           <div class="d-flex justify-content-center">
-            <div class="carta_player pokemon-card">
+            <div class="carta_player pokemon-card card-pok">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_plyr_name_1"
@@ -165,7 +165,7 @@
               </div>
             </div>
 
-            <div class="carta_player pokemon-card">
+            <div class="carta_player pokemon-card card-pok">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_plyr_name_2"
@@ -187,7 +187,7 @@
             </div>
 
             <!-- NEW CARD -->
-            <div class="carta_player pokemon-card">
+            <div class="carta_player pokemon-card card-pok">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_plyr_name_3"
