asignando valores a elementos html

--- a/index.html
+++ b/index.html
@@ -99,48 +99,45 @@
         <div class="battle-cards">
           <div class="row justify-content-center">
             <div class="col-4">
-              <div class="carta_player pokemon-card">
+              <div class="carta_player pokemon-card" id="crd_fight_bg_1">
                 <div class="face front">
                   <div class="pokemon-name-hp">
                     <span class="pokemon-name" id="crd_fight_name_1"
-                      >Charizard</span
+                      ></span
                     >
-                    <span class="pokemon-id" id="crd_fight_id_1">8</span>
+                    <span class="pokemon-id" id="crd_fight_id_1"></span>
                   </div>
                   <div class="imageContainer">
                     <img
-                      id="crd_fight_img_1"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
+                      id="crd_fight_img_1" style="width: 120px"
                     />
                   </div>
                   <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_fight_stats_1">120</span>
-                    <span class="pokemon-type" id="crd_fight_type_1">Fire</span>
+                    <span class="pokemon-hp" id="crd_fight_stats_1"></span>
+                    <span class="pokemon-type" id="crd_fight_type_1"></span>
                   </div>
                 </div>
               </div>
             </div>
 
             <div class="col-4">
-              <div class="carta_player pokemon-card">
+              <div class="carta_player pokemon-card" id="crd_fight_bg_2">
                 <div class="face front">
                   <div class="pokemon-name-hp">
                     <span class="pokemon-name" id="crd_fight_name_2"
-                      >Charizard</span
+                      ></span
                     >
-                    <span class="pokemon-id" id="crd_fight_id_2">8</span>
+                    <span class="pokemon-id" id="crd_fight_id_2"></span>
                   </div>
                   <div class="imageContainer">
                     <img
                       id="crd_fight_img_2"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
                       style="width: 120px"
                     />
                   </div>
                   <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_fight_stats_2">120</span>
-                    <span class="pokemon-type" id="crd_fight_type_2">Fire</span>
+                    <span class="pokemon-hp" id="crd_fight_stats_2"></span>
+                    <span class="pokemon-type" id="crd_fight_type_2"></span>
                   </div>
                 </div>
               </div>
@@ -154,7 +151,7 @@
         <div class="user-field">
           <div class="row">
             <div class="col-4">
-              <div class="carta_player pokemon-card">
+              <div class="carta_player pokemon-card" id="crd_plyr_bg_1">
                 <div class="face front">
                   <div class="pokemon-name-hp">
                     <span class="pokemon-name" id="crd_plyr_name_1"
@@ -164,7 +161,7 @@
                   </div>
                   <div class="imageContainer">
                     <img
-                      id="crd_plyr_img_3"
+                      id="crd_plyr_img_1"
                       src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
                       style="width: 120px"
                     />
@@ -178,7 +175,7 @@
             </div>
 
             <div class="col-4">
-              <div class="carta_player pokemon-card">
+              <div class="carta_player pokemon-card" id="crd_plyr_bg_2">
                 <div class="face front">
                   <div class="pokemon-name-hp">
                     <span class="pokemon-name" id="crd_plyr_name_2"
@@ -188,6 +185,7 @@
                   </div>
                   <div class="imageContainer">
                     <img
+                    id="crd_plyr_img_2"
                       src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
                       style="width: 120px"
                     />
@@ -200,9 +198,8 @@
               </div>
             </div>
 
-            <!-- NEW CARD -->
             <div class="col-4">
-              <div class="carta_player pokemon-card">
+              <div class="carta_player pokemon-card" id="crd_plyr_bg_3">
                 <div class="face front">
                   <div class="pokemon-name-hp">
                     <span class="pokemon-name" id="crd_plyr_name_3"
@@ -212,6 +209,7 @@
                   </div>
                   <div class="imageContainer">
                     <img
+                    id="crd_plyr_img_3"
                       src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
                       style="width: 120px"
                     />
