--- a/index.html
+++ b/index.html
@@ -55,35 +55,11 @@
         <!-- COMPUTER-FIELD -->
         <div class="computer-field">
           <div class="d-flex justify-content-center">
-            <div class="reverse-card card-pok">
-              <div class="reverse-card-img">
-                <img
-                  src="./assets/img/card-reverse.png"
-                  class="img-fluid"
-                  alt="reverse card"
-                />
-              </div>
-            </div>
+            <div class="carta_player card-pok card-back"></div>
 
-            <div class="reverse-card card-pok">
-              <div class="reverse-card-img">
-                <img
-                  src="./assets/img/card-reverse.png"
-                  class="img-fluid"
-                  alt="reverse card"
-                />
-              </div>
-            </div>
+            <div class="carta_player card-pok card-back"></div>
 
-            <div class="reverse-card card-pok">
-              <div class="reverse-card-img">
-                <img
-                  src="./assets/img/card-reverse.png"
-                  class="img-fluid"
-                  alt="reverse card"
-                />
-              </div>
-            </div>
+            <div class="carta_player card-pok card-back"></div>
           </div>
         </div>
 
